2004-04-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoType.cs: AssemblyQualifiedName now displays culture, version...
	Fixes bug #56341.

2004-03-29  Miguel de Icaza  <miguel@ximian.com>

	* Console.cs: If we fail to open stdin/stdout/stderr, create
	readers with a NullStream.  This can happen if our caller does not
	setup stdin/stoud/stderr file handles.  #56158 exposed this, but
	it will happen elsewhere.

2004-03-29  Lluis Sanchez Gual <lluis@ximian.com>

	* Convert.cs: In ToSingle(double), removed checks for Single.MaxValue
	and Single.MinValue. MS.NET don't do it. This fixes bug #56005.
	* Guid.cs: Added support for guid strings in the "N" and "P" formats in
	  the constructor. This fixes bug #54019.

2004-03-23  Lluis Sanchez Gual <lluis@ximian.com>

	* FloatingPointFormatter.cs: Made the class thread safe. Had to move some
	  internal variables to structures that are moved around methods.
	  Factorized some common formatting code into FormatNumberInternal.
	  
2004-03-23  Dick Porter  <dick@ximian.com>

	* DateTime.cs: Allow any character for DateSeparator when parsing,
	except TimeSeparator, a digit or a letter.  Fixes bug 54047.  Also
	deleted the previous fix for 54721, because this covers it too.
	
2004-03-23  Dick Porter  <dick@ximian.com>

	* DateTime.cs: Check the date string for too many digits when
	parsing.  Fixes bugs 53023 and 53025.

2004-03-22  Dick Porter  <dick@ximian.com>

	* String.cs: Use the provider when converting strings to other
	types.

	* DateTime.cs: Add MM-dd-yyyy to the list of standard date parsing
	formats.  Fixes bug 54721.

2004-03-22  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Console.cs: Styled, optimized calls
	* CrossAppDomainDelegate.cs: Small header fix
	* Buffer.cs: Style, improve errors
	* BitConverter.cs: Style, improve errors, remove obsolete comment
	* Attribute.cs: Style, improve errors, small fix
	* Array.cs: Style, improve errors, small fix, added TODOs